examples/test/testpolicy5299.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5299
  namespace: namespace390
spec:
  podSelector:
    matchLabels:
      key10: value16
      key32: value8
      key45: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value27
          key15: value19
          key23: value39
      podSelector:
        matchLabels:
          key48: value28
